WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262456
[JSC] Align negative lookahead assertion of ExpressionStatement with the spec
https://bugs.webkit.org/show_bug.cgi?id=262456
Summary
[JSC] Align negative lookahead assertion of ExpressionStatement with the spec
Alexey Shvayka
Reported
2023-09-30 22:10:47 PDT
Related test262 failures: * test/language/statements/labeled/decl-async-function.js * test/language/statements/labeled/decl-async-generator.js * test/language/statements/labeled/let-array-with-newline.js
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-30 22:11:12 PDT
<
rdar://problem/116299721
>
Alexey Shvayka
Comment 2
2023-10-17 01:00:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19155
EWS
Comment 3
2023-10-17 15:22:01 PDT
Committed
269430@main
(6bef023b7734): <
https://commits.webkit.org/269430@main
> Reviewed commits have been landed. Closing PR #19155 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug